--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
+    "canvas-confetti": "^1.4.0",
     "classnames": "^2.3.1",
+    "gsap": "^3.7.1",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "splitting": "^1.0.6",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
